# evg-bonsai

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
samples/: bonsai.landscape.yml  bonsai.manifest.yml
samples/bonsai_pots/: bonsai.greet_everyone.yml  bonsai.greeting.yml  bonsai.npm.yml  bonsai.poetry.yml
src/: lib.rs  main.rs
src/landscape/: bonsai_command.rs  bonsai_landscape.rs  bonsai_task.rs  command.rs  function.rs  landscape.rs  mod.rs  pot.rs  task.rs
src/pot/: github_service.rs  manifest.rs  mod.rs  remote_pot.rs
