[package]
name = "evg-bonsai"
version = "0.1.0"
authors = ["David Bradford <david.bradford@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
directories-next = "2.0"
git2 = "0.13"
shrub-rs = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
simple-error = "0.2"
structopt = "0.3"
yaml-merge-keys = "0.4"
yaml-rust = "0.4"
